# otus_allocator

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp  map_allocator.h  test_container.h
tests/: test_1.sh
